force-app/main/default/objects/Capture_Health__c/Capture_Health__c.object-meta.xml
<CustomObject><label>Capture Health</label><pluralLabel>Capture Health</pluralLabel><nameField><label>Health Number</label><type>AutoNumber</type><displayFormat>CH-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel></CustomObject>