force-app/main/default/objects/Capture_Health__c/fields/Details__c.field-meta.xml
<CustomField><fullName>Details__c</fullName><label>Details</label><length>4000</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>