force-app/main/default/objects/Capture_Health__c/fields/Event_Uuid__c.field-meta.xml
<CustomField><fullName>Event_Uuid__c</fullName><label>Event UUID</label><length>36</length><type>Text</type></CustomField>