force-app/main/default/objects/Capture_Health__c/fields/Health_Type__c.field-meta.xml
<CustomField><fullName>Health_Type__c</fullName><label>Health Type</label><length>50</length><type>Text</type></CustomField>